# Mini-Project

server/: main.py  pyproject.toml
server/memory/: router.py
server/memory/classifier/: pipeline.py
server/memory/classifier/stage_1/: heuristics.py
server/memory/classifier/stage_2/: embedding.py
server/memory/classifier/stage_3/: threshold.py
server/memory/classifier/stage_4/: policy.py
server/memory/classifier/stage_5/: llm_judge.py
server/tests/: conftest.py  test_pipeline.py  test_router.py  test_stage1_heuristics.py  test_stage2_embedding.py  test_stage3_threshold.py  test_stage4_policy.py  test_stage5_llm_judge.py
