[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.4",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]
env_files  = [".env"]
